ecmascript/parser/tests/test262-error-references/fail/043ab1c3982db3cd.js.stderr
error: A rest parameter cannot have an initializer
 --> $DIR/tests/test262-parser/fail/043ab1c3982db3cd.js:1:15
  |
1 | function x(...a = 1){}
  |               ^

